feat(api): add swagger for auth
