# api/controllers/health_controller.go
@@ -2,6 +2,11 @@ package controllers
 
 import "github.com/gofiber/fiber/v2"
 
+// @Summary      Health check
+// @Tags         Health check
+// @Accept       json
+// @Produce      json
+// @Router       /health_check/ [get]
 func HealthController(c *fiber.Ctx) error {
 	return c.SendString("OK")
 }
